--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ POSTGRES_USER="default"
 POSTGRES_HOST="ep-muddy-breeze-a4x3qv7r-pooler.us-east-1.aws.neon.tech"
 POSTGRES_PASSWORD="kU0qjeS1lWhM"
 POSTGRES_DATABASE="verceldb"
+
+NEXT_PUBLIC_API_URL="/api"
